# Vox

./: .dockerignore  .gitignore  .gitkeep  Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
Teste e Resultados de treinos/a_output/: a_tracking_cpu.csv  a_tracking_cpu.json  a_tracks_gpu.csv  a_tracks_gpu.json
Teste e Resultados de treinos/b_output/: b_completo_cpu.csv  b_completo_cpu.json  b_tracking_cpu.csv  b_tracking_cpu.json  b_tracks_gpu.csv  b_tracks_gpu.json
experiments/: AED.ipynb  Testes copy.ipynb
mlruns/0/: meta.yaml
mlruns/602853348255202391/: meta.yaml
outras configs/: full config.json  gpu config.json
runs/yolo11n_classification_colors_n/: args.yaml
runs/yolo11n_classification_colors_n2/: results.csv
runs/yolo11n_classification_colors_n3/: results.csv
runs/yolo11n_classification_colors_n4/: args.yaml  results.csv
runs/yolo11n_detection_detect/: dataset_manifest.json
runs/yolo11n_detection_detect2/: results.csv
runs/yolo11n_detection_detect3/: results.csv
runs/yolo11s_classification_colors_s/: args.yaml  results.csv
runs/yolo11s_classification_colors_s2/: args.yaml  results.csv
runs/yolo11s_classification_colors_s3/: args.yaml  results.csv
runs/yolo11s_detection_detect2/: results.csv
runs/yolo11s_detection_detect3/: args.yaml
src/: config.json  main.py  main_classify.py  main_interactive.py  main_uni.py
src/.ipynb_checkpoints/: config-checkpoint.json  full config-checkpoint.json  gpu config-checkpoint.json  main_uni-checkpoint.py
src/Modelos/: Yolov11.py  yolo8.py
src/api/: main_api.py
(+93 files in other folders)
