[tool.poetry]
name = "vox-machine"
version = "2.0.0"
description = "Vox Veiculos Classificador de Imagens e Videos"
authors = ["Rian Ferreira <rianagar.io@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
ultralytics = ">=8.3.0"
numpy = ">=1.2.4"
opencv-python-headless = ">=4.8.0"
pillow = ">=10.0.0"
filterpy = ">=1.4.5"
lap = ">=0.4.0"
fastapi = ">=0.104.0"
gunicorn = ">=21.2.0"
uvicorn = {version = ">=0.24.0", extras = ["standard"]}
python-multipart = ">=0.0.6"
orjson = ">=3.9.0"
pyyaml = ">=6.0"
python-dotenv = ">=1.0.0"
loguru = ">=0.7.0"
imageio-ffmpeg = ">=0.4.9"
charset-normalizer = "^3.4.3"
requests = {extras = ["use-chardet-on-py3"], version = "^2.32.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
